fix overflow

--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -6,10 +6,8 @@ body, html, #drawZone {
 
   margin:0;
   padding:0;
-  overflow:hidden;
-
 }
-
+#drawZone {  overflow:hidden;}
 #message {
   position: absolute;
   width: 80%;
